--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "ui-theme-template",
+  "name": "snik-ui",
   "theme": "ui",
   "version": "0.0.0",
-  "description": "A short description of your UI theme",
+  "description": "Clean and beautiful ui theme for minimalists",
   "keywords": [
     "ui",
     "theme"
   ],
-  "repository": "https://github.com/atom-community/ui-theme-template",
+  "repository": "https://github.com/michalsnik/snik-ui",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
